--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -1,1904 +1,1057 @@
 
-
 Liburu hau programatzen ikasteko gida bat da. Horretarako, ahalik eta tresnarik sinpleenak erabiltzen ditu, Python bezalako hizkuntza erraz eta erabilgarria eta programak lehen kapitulutik idazten hasteko aukera. Errazenetik hasi eta pixkanaka teknika berriak sartzen dira.
-
-
-
 Baina zerbait argi izan behar duzu. Irakurtzera mugatzen bazara, baliteke ideiaren batekin geratzea, baina** ez duzu ikasiko** benetan programatzen. Pro bihurtzeko, ordenagailua aurrean izan behar duzu eta hemen azaltzen dizuguna praktikatu. Proposatutako ariketak egiten, idazten, probatzen eta zure gustura hobetzen saiatu behar duzu. Izan ere,** programatzen ikasten da** programatuz.
-
-
-
 Liburu hau, ebatzitako ariketak eta web orri bat jartzen ditugu zure eskura. Bertan sartu besterik ez duzu egin behar, eta proposatzen dizkizugun praktikekin jolastu ahal izango duzu.
 
+# Mukientzako programazioa
 
-
-#Mukientzako programazioa
 Ordenagailuak azkarrak dira eta memoria izugarria dute: segundoko milioika jarraibide exekutatzeko eta datu kopuru imajinaezinak kudeatzeko gai diren makinak dira. Baina horrek ez du esan nahi bizkorrak direnik. Berez ez dakite ezer egiten. Ordenagailu bat, edo* tableta* bat, mugikor bat,
-
 egin zerbait zehatza, programa bat exekutatu behar dute. Eta programa bat programatzaileek idatzitako agindu-multzo bat da.
-
-
 
 Programazioaren alderdi interesgarriena da makinaren kontrola har dezakegula, hark guk nahi duguna egin dezan: instrukzio sinple batetik hasi eta nabigatzaile edo joko oso konplexuak programatzeraino. Programazioa lotuta dago, nahi duzuna sor dezakezulako, zure irudimena eta trebetasunak beste mugarik gabe.
 
-
 Baina zein hizkuntzatan komunikatu gaitezke ordenagailuekin? Horietako asko daude. Barnean, ordenagailuak hizkuntza bitarra erabiltzen du, hau da, zerbait egiteko interpretatzeko gai den zeroen sekuentzia. Hala ere, programazio-lana errazteko, hizkuntza sinpleagoak daude, pertsonen hizkuntzaren antz handia dutenak.
-
-
 
 Python lengoaia horietako bat da, eta bertute asko ditu: erraza da, ikasteko oso erraza, edozer egiteko aukera ematen du, liburu denda ugari ditu eta, gainera, modu profesionalean erabiltzen da. Liburu honetan Python erabiliz programatzen ikasiko duzu. Pixkanaka, hizkuntzak eskaintzen dizkizun tresna berriak ezagutuko dituzu, programa konplexuagoak sortzen ikasteko.
 
-
 Zer behar duzu oraintxe bertan hasteko? Nabigatzaile bat. Lehenengo kapitulutik programatzen hasiko gara. Programatzen ikasteko modurik onena... programatzea da! Ez da beldurrik izan behar, eta, gainera, dibertigarriena da. Beraz, nahikoa da. Pasa hurrengo kapitulura zure lehen programa idazteko!
 
-
-
 Oharra:
-
 Agian entzuna duzu ordenagailuek adimen artifiziala izan dezaketela edo baliteke
-
 etsaiak oso bizkorrak diruditen jolasen aurka. Egia esan, ordenagailuak jokabide adimendunak imitatzen dituzten programak exekutatzen ditu.
 
-
-
 2. oharra:
-
 Ohiko programazio-ingurune bat instalatu nahi baduzu, zoaz X eranskinera.
 
-
-
 #Ingurunea
-
 Interneterako konexioa duen edozein ordenagailutan sartu:
-
-
 
 https://repl.it /
 
-
-
 ! [Site de replt.it] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/00.png)
 
-
-
 Hortik, `Start coding
-
-
 ! [Start Coding replt.it] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/01.png)
-
-
 
 Eta hautatu** Python** lengoaia:
 
-
-
 ! [Python en replt.it hautaketa] (https://raw.githubusercontent.com/pxai/mucos/master/book/images/02.png)
-
-
 
 Behin hori eginda, programazio-ingurunea kargatuko da:
 
-
-
 ! [Replt.it garapen-ingurunea] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/03.png)
 
-
-
 - Ezkerrean, programa idazteko editorea duzu.
-
 - Eskuinean, kontsola, non ikusiko duzun emaitza programa exekutatzen duzunean.
-
 - Goiko aldean,** Run** botoia, programa nahi beste aldiz exekutatzeko.
-
-
 
 Repl.it. gunean alta ematea gomendatzen dizugu. Horrela, egiten dituzun programa guztiak gordeta eta lokalizatuta izango dituzu.
 
-
-
 Online aukerak:
-
 - https://paiza.io/es
-
 - https://www.programiz.com/python-programming/online-compiler /
 
+# Kaixo mundua
 
-
-#Kaixo mundua
 Programatzaileek idatzi ohi duten lehen programa mezu bat pantailatik ateratzea da. Eta mezu hori munduari egindako agurra izan ohi da: "Kaixo mundua!"
-
 Honela egiten da:
 
 ```python
-
 print ("Kaixo mundua!")
-
 ```
 
 Hori frogatzen baduzu, pantailatik horrelako zerbait ikusi beharko zenuke:
 
-
-
 ```console
-
 Kaixo mundua!
-
 ```
 
-
-
 Python lengoaiaren funtzio bat da, mezuak pantailan erakusteko aukera ematen diguna, eta askotan erabiliko dugu mezuak, emaitzak eta abar erakusteko.
-
-
 
 KONTUZ! Kapitulu honetakoak bezalako programa oso sinpleetan, saiatu ez jartzen tarterik programaren jarraibideen aurretik, edo Pythonek errore bat emango du:
 
 ```python
-
 print ("Kaixo mundua!")
-
 ```
 
 Oker legoke:
 
-
-
 ```console
-
 print ("Kaixo mundua!")
-
 ^
-
 IndentationError: unexpected indent
-
 ```
 
 Python-en espazioak edo tabulazioak gehitzen dira kodea beste bloke batzuen barruan dagoela adierazteko, pixkanaka ikusiko duzun bezala. Oraingoz, kapitulu honetarako, hasi zure kodea lerroaren hasieratik.
-
 
 Zure txanda da! 0.0 ariketa
 
 Idatzi zure izena pantaila bidez erakusten duen programa bat.
 
-
-
 ```python
-
 print ("Kaixo Ada naiz")
-
 ```
-
 Emaitza:
 
-
-
 ```console
-
 Kaixo, Ada naiz.
-
 ```
-
-
 
 KONTUZ! Python hizkuntzan oso garrantzitsua da lerroaren hasieran tabulaziorik edo espaziorik ez erabiltzea (hurrengo kapituluetan ikusiko ditugun blokeak erabili ezean). Horrek huts egingo luke:
 
-
-
 ```python
-
 print ("Kaixo mundua!")
-
 ```
-
-
 
 ## Iruzkinak
 
-
-
 Programa batean, iruzkinak jar daitezke. Exekutatzen ez den testua da, ordenagailuak erabat ezagutzen ez duena. Zertarako erabiltzen da? Oro har, iruzkinak programaren zati jakin batzuk azaltzeko erabiltzen dira.
 
-
-
 ```python
-
 #Programa honek dio Kaixo
-
 print ("Kaixo")
-
 ```
 
 Pythonek ez dio jaramonik egiten iruzkinari, eta "Telefonoa pantailan" erakutsiko du.
-
 Hainbat lerrori buruzko iruzkinak ere egin daitezke:
 
-
-
 ```python
-
 ""
-
 Python programa bat da.
-
 ADAk sortua
-
 eta Nekok berrikusia
-
 ""
-
 ```
 Batzuetan, iruzkinak aldi baterako erabiltzen dira exekutatzea nahi ez dugun kodearen zati bat "desaktibatzeko".
 
-
-
 Oharra: oro har, iruzkinak saihestu behar dituzu. Programatzaile on batek programa ulerterrazak idazten saiatu behar du, inolako iruzkinik behar ez dutenak.
 
-
-
-#Aldagaiak
+# Aldagaiak
 
 Aldagaiek datuak gordetzeko balio dute. Ordenagailu-programek, funtsean, arazo bat konpontzeko eta emaitza bat emateko datuak maneiatzen dituzte. Prozesu horretan guztian beharrezkoa da datuak gordetzea, eta horretarako aldagaiak erabiltzen dira. Aldagaiak datu-edukiontziak bezalakoak dira. Kozinatzeko erabiltzen diren edalontziak, platerak eta iturriak bezalakoak dira nolabait: zerbait dute, horrekin lan egiten da, nahastu egiten da, prozesatu egiten da eta emaitza bat lortzen da: zorte pixka batekin zerbait aberatsa lortzen da.
 
 Python aldagai bat definitzeko, nahikoa da bere izena adieraztea eta balioren bat ematea. Adibidez:
 
 ```python
-
 izena = "Ada"
-
 ```
-
 
 "Ada" balioa duen aldagai bat sortu berri dugu. "Ada" datu bat da, eta testu motakoa da. Orain, aldagai horren balioa bistara dezakegu pantailan:
 
-
-
 ```python
-
 print (izena)
-
 ```
 
-Pantaila bidez,
-
-
+Emaitza pantailan:
 
 ```console
-
 Ada
-
 ```
 
 Edozein unetan alda dezakegu aldagai horren balioa:
 
 ```python
-
 izena = "Ada"
-
 print (izena)
-
 izena = "Neko"
-
 print (izena)
-
 ```
 
 Eta pantailan ikusiko dugu:
 
 ```console
-
 Ada
-
 Neko
-
 ```
 
-
-
 Oharra:
-
 Aldagai baten edukia mezuaren zati gisa ere erakuts daiteke.
-
 Horretarako hainbat aukera daude:
-
-
 
 ## Komen bidez bereizi
 
 Nahikoa da aldagaiak eta testua komekin tartekatzea:
 
 ```python
-
 izena = "Bug"
-
 adina = 10
-
 print ("Kaixo, izena dut", izena)
-
 print ("Naiz", izena, "dut", adina, "urteak")
-
 ```
 
-Pantaila bidez,
-
-
+Emaitza pantailan:
 
 ```console
-
 Kaixo, Bug dut izena.
-
 Bug naiz, 10 urte ditut.
-
 ```
-
-
 
 Orain zu! 0.1 ariketa
 
 Sortu bi aldagai `izen eta edadetu, eta erakutsi haien balioa pantailan.
 
-
-
 ```python
-
 izena = "Ada"
-
 adina = 14
 print ("Zure izena da", izena, "duzu", adina, "urteak")
 
-
-
 #Alternatiba:
-
 #print ("Zure izena % s da, % d urte dituzu" % (izena, adina)
-
 ```
 
 Emaitza:
 
-
-
 ```console
-
 Zure izena Ada da eta 14 urte dituzu.
-
 ```
 
-
-
-## Formatuko stringa
+## Formatodun testua
 
 Aldagai bat baino gehiago erakusteko beste modu bat mezu bat da. Aurretik, "f" letra eta giltzen arteko aldagaiak daude:
 
 ```python
-
 izena = "Bug"
-
 adina = 10
-
 print (f "Kaixo, {izena} dut izena")
-
 print (f "{izena} naiz {} urte ditut")
-
 ```
 
-Pantaila bidez,
-
-
+Emaitza pantailan:
 
 ```console
-
 Kaixo, Bug dut izena.
-
 Bug naiz, 10 urte ditut.
-
 ```
 
 KONTUZ, aukera hau Python 3.6tik bakarrik dago eskuragarri
-
-
 
 ## Ehunekoa ordeztea
 
 Aldagaiak pantaila bidez erakusteko beste aukera bat. % s elementuak aldagaiekin ordezkatzen dituen mezu bat sortzen da.
 
 ```python
-
 print ("Kaixo, % s dut izena" % izena)
-
 ```
 
-Pantaila bidez,
-
-
+Emaitza pantailan:
 
 ```console
-
 Kaixo, Ada dut izena.
-
 ```
-
-
 
 Gauza bera egin dezakezu hainbat aldagairekin
 
 ```python
-
 izena = "Neko"
-
 adina = 5
 
-
-
 print ("Kaixo, % s dut izena eta % d urte ditut" % (izena, adina)
-
 ```
-Pantaila bakoitzeko:
 
-
+Emaitza pantailan:
 
 ```console
-
 Kaixo, Neko dut izena eta 5 urte ditut.
-
 ```
 
+# Datu-motak
 
-
-#Datu-motak
-
-Datuak! Programek lantzen duten lehengaia da. Gure programek eraldatzen duten elementua dira. Programa batek datuak jaso, eraldatu eta emaitza gisa itzultzen ditu.
-
-Datuak desberdinak izan daitezke, gure programak egin behar duenaren arabera. Zenbakiak izan daitezke, hitzak edo testuak izan daitezke, baliogabeak edo hutsak ere izan daitezke.
-
-Datuak gordetzeko, normalean aldagaiak erabiltzen ditugu.
+Datuak! Programek lantzen duten lehengaia da. Gure programek eraldatzen duten elementua dira. Programa batek datuak jaso, eraldatu eta emaitza gisa itzultzen ditu. Datuak desberdinak izan daitezke, gure programak egin behar duenaren arabera. Zenbakiak izan daitezke, hitzak edo testuak izan daitezke, baliogabeak edo hutsak ere izan daitezke. Datuak gordetzeko, normalean aldagaiak erabiltzen ditugu.
 
 Programazioa sukaldaritzarekin alderatzen badugu, orduan azukrea, irina eta arrautzak datuak izango lirateke, ontziak aldakorrak izango lirateke: tarta beste datu bat izango litzateke, emaitza eta errezeta programa izango litzateke.
 
 Nola daki Pythonek zein datu mota darabilen? Ez dago esan beharrik, beste hizkuntza batzuetan bezala. Horregatik da hizkuntza sinpleagoa eta malguagoa. Baina ezin izango dugu nahi duguna egin datuekin.
 
-
-
 Jarraian, oinarrizko datu motak ikusiko ditugu.
 
-
-
 ## Zenbakiak
+
 Mota guztietako zenbakiak dira:
 
 - Osoak:
-
 1, 2, 3, 4,...
 
-
-
 ```python
-
 kontagailua = 10
-
 adina = 12
-
 ```
-
-
 
 - Hamartarrekin:
 
-Zenbaki hamartarrak, zati osoa eta hamartarra (4.5 edo 3.1415) bereizteko, `., erabiltzen dira. Baliteke mateen klasean koma bat erabiltzea hamartarrak bereizteko, baina programazioan ingelesezko formatua erabiltzen da eta `., erabili behar dugu.
-
-
+Zenbaki hamartarrak, zati osoa eta hamartarra (4.5 edo 3.1415) bereizteko, `.`, erabiltzen dira. Baliteke mateen klasean koma bat erabiltzea hamartarrak bereizteko, baina programazioan ingelesezko formatua erabiltzen da eta `.`, erabili behar dugu.
 
 ```python
-
 pisua = 34.67
-
 prezioa = 242.9943
-
 ```
-
-
 
 - Negatiboak:
 
 0 zenbaki txikiagoak marratxo batekin adierazten dira: -4, -5, -3.1415,...
 
-
-
 ```python
-
 oharra = -5
-
 tenperaturaMarten = -50.676
-
 ```
-
-
 
 ## Testua
 
 Testua, kateak edo* strings* ere deituak, komatxo bikoitz edo sinpleen arteko edozein hitz-multzo da.
 
-
-
 ```python
-
 izena = "Ada"
-
 esaldia = "
-
 hitzak = 'Lanera noa'
-
 novia = 'Lagunak izatea besterik ez dut nahi'
-
 ```
+
 Testuaren kasuan, zenbait karaktere berezi sar ditzakegu, ondorio interesgarriak izateko. Karaktere horiek kontra-barra batekin edo* backslash* batekin idazten dira aurretik.
 
-
-
-- Lineako jauzia
+- Lerro jauzia
 
 Horrek lerro-jauzi bat gehitzen dio testuari, pantaila bidez erakusten bada:
 
-
-
 ```python
-
 esaldia = "Kaixo,\n zer moduz"
-
 ```
 
 honela erakutsiko da:
 
-``shell
-
+```console
 Kaixo,
-
 zer moduz
-
 ```
-
-
 
 Hainbat lerrotako testu bat ere defini daiteke:
 
-
-
 ```python
-
 Igande bat zen.
-
 arratsaldean
-
 autoetara joan nintzen
-
 talka "" "
-
 ```
-
-
 
 - Tabulazioak
-
 Horrek tabulazio bat (hainbat espazio) gehitzen dio testuari, pantaila bidez erakusten bada:
 
-
-
 ```python
-
 esaldia = "Izena\Abizena\Adina"
-
 ```
-
 honela erakutsiko da:
 
-``shell
-
+```console
 Izena Abizena Adina
-
 ```
 
 Beste karaktere berezi batzuk:
 
-
-
--\\Testu batean kontra-barra erakusteko.
-
--\"Komatxo bikoitza erakusteko testu batean.
-
--\'Komatxo sinple bat erakusteko testu batean.
-
--\a Txistua jotzeko.
-
-
+-\\ Testu batean kontra-barra erakusteko.
+-\" Komatxo bikoitza erakusteko testu batean.
+-\' Komatxo sinple bat erakusteko testu batean.
+-\a Pitidoa jotzeko.
 
 ## Boolearrak
 
 Boolear motak bi balio posible bakarrik izan ditzake:
+
 Datuak, hau da, egiazkoak edo okerrak. Programazioan funtsezko datua da, erabakiak hartzeko erabiltzen baita.
 
-
-
 ```python
-
 amaituta = False
-
 esMayor = True
-
 pythonMola = True
-
 ```
-
-
 
 ## Zerrendak
 
 Zerrendak datu-multzoak dira, eta honela definitzen dira:
 
-
-
 ```python
-
 lagunak = ["Ada", "Miranda", "Ruby"]
-
 ```
 
 Edozein motatakoak izan daitezke, baina normalena da zerrenda bateko elementu guztiak mota berekoak izatea:
 
-
-
 ```python
-
 etsaiak = []
-
 [12, 16, 30, 0, 22, 1, 1, 12]
-
 egiak = [True, False, False, True]
-
 ```
 
 Zerrendako balio zehatz bat adierazteko, interesatzen zaigun zerrendako elementuaren posizioa adierazi behar dugu, 0tik hasita:
 
-
-
 ```python
-
 izenak = ["Ada", "Neko", "Bug"]
-
 print (izenak [0]) # "Ada"
-
 ```
 
 Izendapenen zerrendaren kasuan, posizio posibleak 0, 1 eta 2 izango dira.
-
 Baina kontuz! Posizio handiegia pasatzen baduzu, programa akats batekin amaituko da:
 
 ```python
-
 izenak = ["Ada", "Neko", "Bug"]
 print (izenak [4]) #ERROREA!
-
 ```
 
 Aurrerago itzuliko gara zerrendetara eta beste egitura batzuetara.
 
-
-
 ## None
 
 Arraroa dirudien arren, programetan batzuetan hutsa, ezereza irudikatzen duen zerbaitekin hitz egin behar izaten da.
-
 Badago hitz bat Python-en ezereza irudikatzeko aukera ematen diguna, eta hori da:
 
-
-
 ```python
-
 Hasierako balioa = None
-
 dato = None
-
 ```
 
 Egia esan, ez da aldagaiak sortzeko erabiltzen. `Nonoporek balio bat adierazten du egoera berezietan. Adibidez, informazioa fitxategi bat edo erabiltzaileak ematen ez digun datu bat ez dagoen leku batetik atera nahi badugu.
-
-
 
 0.2 ariketa
 
 Idatzi hemen ikusitako mota bakoitzaren aldagai bat definituko duen programa bat, eta kontsola bidez erakutsiko ditu.
 
-
-
 ```python
-
 izena = "Ada"
-
 adina = 42
-
 pisua = 101.54
-
 vivo = True
-
 aberastasunak = None
-
 lagunak = ["Ada", "Ruby", "Miranda"]
 
-
-
 print (izena)
-
 print (adina)
-
 print (pisua)
-
 print (bizirik)
-
 print (aberastasunak)
-
 print (lagunak)
-
 ```
-
-
 
 Emaitza:
 
-
-
 ```console
-
 Ada
-
 42
-
 101.54
-
 true
-
 null
-
 ["Ada", "Ruby", "Miranda"]
-
 ```
 
-
-#Datuak irakurtzen
+# Datuak irakurtzen
 
 Programa batek zerbait egin ahal izateko, askotan erabiltzaileak datu bat sartu behar du. Adibidez, programa batek gure izenak zenbat letra dituen edo gure urtebetetzerako zenbat falta den esatea nahi badugu, lehenik eta behin datu bat eskatu beharko du programak.
 
-
-
 Oraingoz ikusten ari garenak bezalako oinarrizko programek kontsola erabiltzen dute exekutatzeko. Pantaila beltz horietan idatzitako aginduak jartzen dira;)
-
-
 
 Erabiltzaileari datu bat eskatu eta aldagai batean gordetzeko, honako funtzio hau erabiltzen da:
 
-
-
 ```python
-
 izena = input ("Esadazu zure izena:")
-
 print ("Kaixo", izena)
-
 ```
-
-
 
 Pantailan honako hau ikusiko zenuke:
 
-
-
 ```code
-
 Esadazu zure izena:
-
 ```
 
 Input funtzioaren ondorioz, pantailan agertzen da "Zure izena adierazi:" mezua. Era berean, programa gelditu egiten da, erabiltzaileak zerbait idatzi arte.
-
-Erabiltzaileak «Kontsola ezazu» idazten badu, honela ikusiko da:
-
-
+Erabiltzaileak "Rosa" idazten badu, honela ikusiko da:
 
 ```code
-
 Esadazu zure izena: Rosa
-
 Kaixo, Rosa.
-
 ```
-
-
 
 0.3 ariketa
+
 Idatzi erabiltzaileari izen bat eskatu eta aldagai batean gordeko duen programa bat. Jarraian, kontsola bidezko agurra egin behar duzu.
 
-
-
-
-
 ```python
-
 izena = input ("Sartu zure izena:")
-
 print ("Kaixo, zer moduz zaude", izena)
 
-
-
 #Alternatiba:
-
 #print ("Kaixo, zer moduz zaude % s" % izena)
-
 ```
-
-
 
 Emaitza:
 
-
-
 ```console
-
 Sartu zure izena: Juan
-
 Kaixo, zer moduz zaude Juan?
-
 ```
-
-
 
 ## Kontuz datuekin
 
 Erabiltzaileak zerbait idazteko,*** delako funtzioa erabiltzen duzun bakoitzean,*** testu gisa gordeko da. Nahiz eta zenbaki bat idatzi:
 
-
-
 ```python
-
 balioa = input ("Eman zenbaki bat:")
-
 bikoitza = balioa + balioa
-
 print (bikoitza)
-
 ```
-
-
 
 Erabiltzaileak "4" bezalako zenbaki bat sartuz gero, emaitza hau izango litzateke:
 
-
-
 ```console
-
 Emadazu zenbaki bat: 4
-
 44
-
 ```
 
-`4 + 4 'gehitu eta `8 "erakutsi beharrean, `4' eta `4 'batu egin ditu, izan ere," 4 "testua irakurri duenean," 4 "testua da.
+`4 + 4` gehitu eta `8` erakutsi beharrean, `4` eta `4` batu egin ditu, izan ere," 4 "testua irakurri duenean," 4 " testua da.
 
-
-
-Hori saihesteko, beste funtzio bat erabili behar dugu datu hori zenbaki oso bihurtzeko: `int ()
-
-
+Hori saihesteko, beste funtzio bat erabili behar dugu datu hori zenbaki oso bihurtzeko: `int ()`
 
 ```python
 balioa = input ("Eman zenbaki bat:")
-
 bikoitza = int (balioa) + int (balioa)
-
 print (bikoitza)
-
 ```
-
-
 
 Edo lehenago ere bihur dezakegu:
 
-
-
 ```python
-
 balioa = input ("Eman zenbaki bat:")
-
 balioa = int (balioa)
-
 bikoitza = balioa + balioa
-
 print (bikoitza)
-
 ```
 
-
-
-Edo, are gehiago, inputatu egin behar da:
-
-
+Edo, are gehiago, input egiten den bitartean:
 
 ```python
-
 balioa = int (input ("Emadazu zenbaki bat:")
-
 bikoitza = balioa + balioa
-
 print (bikoitza)
-
 ```
-
-
 
 Orain bai:
 
 ```console
-
 Emadazu zenbaki bat: 4
-
 8
-
 ```
-
-
 
 0.4 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat eta gehitu 10. Jarraian, kontsola bidez erakutsi behar duzu emaitza. Gogoratu sartutako balioa zenbaki oso bihurtzeko sartzea komeni dela.
 
-
-
 ```python
-
 balioa = input ("Sartu zenbaki bat:")
-
 emaitza = int (balioa) + 10
 
-
-
 print ("Batura hau da:", emaitza)
-
 ```
 
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: 32
-
 Batura hau da: 42
-
 ```
-
-
 
 ## Beste bihurketa batzuk
 
 Hizkuntzan aldagai motak adierazi behar ez baditugu ere, motak (testua, zenbakia, etab.) kontuan hartzen dira programa gauzatzerakoan.
-
-
 Adibidez, zenbaki bat duen aldagai bat badugu eta testu batean kateatu nahi badugu, errore bat lortuko genuke:
 
-
-
 ```python
-
 balioa = 66
-
 testua = "Nire adina da" + balioa
-
 ```
 
 Errorea hau izango litzateke:
 
 ```console
-
 TypeError: cannot concatenate 'str' and 'int' objects
-
 ```
 
 Hori saihesteko, testu-mota behartu behar dugu `str ()» erabiliz:
 
-
-
 ```python
-
 balioa = 66
-
 testua = "Nire adina da" + str (balioa)
-
 ```
 
 Beraz, batzuetan balio bat mota jakin batean bihurtu beharko dugu. Hauek dira bihurtzeko funtzioak:
-
 - str (): balio bat testu bihurtzen du. · "5" itzuliko luke.
-
 - int (): balio bat zenbaki oso bihurtzen du.
-
 - float (): balio bat zenbaki bihurtzen du hamartarrekin.
-
 - bool (): balio bat boolear batera bihurtzen du. `bool ("False") Itzuli egingo luke.
-
-
 
 KONTUZ! Bateragarria ez den balio bat bihurtzen saiatzen bazara, programak huts egingo du eta bat-batean amaituko da.
 
+# Eragileak
 
-
-#Operadoreak
 Programek zenbakiekin kalkuluak egin behar dituzte, datuak prozesatu, balioen arabera erabakiak hartu. Horretarako operadoreak behar ditugu.
-
-
 
 ## Eragile aritmetikoak
 
 Batuketak, kenketak eta oinarrizko kalkulu guztiak balioekin eta aldagaietan gordetzen denarekin egiteko aukera emango dizuten guztiak dira; adibidez, batuketa:
 
-
-
 ```python
-
 txikleak = 4
-
 txikleak = txikleak + 2
-
 ```
 
 Programaren kalkuluen arabera, 4 txikle edukitzetik 6 izatera igaro zara.
-
 Hauek dira programazioko oinarrizko eragiketak:
 
 - Batuketa: `+
-
 - Kenketa:
-
 - Biderketa:
-
 - Dibisioa:
-
-
 
 Adibidez, egun batek zenbat segundo dituen kalkulatzeko:
 
 ```python
-
 minutuak = 60
-
 segundoak = 60
-
 orduak = 24
 
-
-
-Segundoak = segundoak* minutuak* orduak
-
+Segundoak = segundoak * minutuak * orduak
 ```
-
-
 
 Behar bezain eragiketa konplexuak egin ditzakezu. Irakurtzeko errazagoak izan daitezen, parentesiak erabil daitezke, mateetan egiten den bezala:
 
-
-
 ```python
-
 ada = 14
-
 bug = 10
-
 neko = 2
-
 batez bestekoa = (ada + bug + neko)/3
-
 ```
 
-
-
 0.5 ariketa
+
 Idatzi erabiltzaileari zenbaki bat eskatu eta 5 kentzen dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
-
-
 ```python
-
 balioa = input ("Sartu zenbaki bat:")
-
 emaitza = int (balioa) - 5
 
-
-
 print ("Kenketa da:", emaitza)
-
 ```
 
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: 30
-
 Kenketa hau da: 25
-
 ```
 
+##  Modulua eta esponentziala
 
-
-##  ## Modulua eta esponentziala
-
-Programazioan oso garrantzitsua den eragiketa bat dago, agian mateetan hain ohikoa ez dena:** modulua da**. Zatiketaren emaitzaren ordez hondakina itzultzen duen zatiketa da:
-
-
+Programazioan oso garrantzitsua den eragiketa bat dago, agian mateetan hain ohikoa ez dena: modulua da. Zatiketaren emaitzaren ordez hondakina itzultzen duen zatiketa da:
 
 ```python
-
 balioa = 8
-
 emaitza = balioa % 3
-
 ```
 
 Emaitza-balioa hauxe izango da:
 
 
-
 Esponentziala zenbaki bat bere kabuz hainbat aldiz biderkatzearen emaitza da. Pythonen operadore honekin egin daiteke eragiketa hori:
 
-
-
 ```python
-
 balioa = 2
-
 emaitza = balioa** 3 #honen baliokidea da: 2* 2* 2
-
 ```
 
+Emaitza `8` izango litzateke.
 
-
-Emaitza `8 "izango litzateke.
-
-
-
-##  #Zeinu-aldaketa
+##  Zeinu-aldaketa
 
 Ondo dakizunez, zenbaki batzuk zero baino txikiagoak dira, eta negatibo esaten zaie. Zenbaki horiek aurretik `-u 'batekin adierazten dira:
 
 ```python
 - 5, -248, -1.87,...
-
 ```
 
-Zenbaki baten zeinua aldatu nahi badugu, aurretik `-u 'bat jar dezakegu:
-
-
+Zenbaki baten zeinua aldatu nahi badugu, aurretik `-u` bat jar dezakegu:
 
 ```python
-
 tenperatura = -11
-
 kontua = 200
 
-
-
 tenperatura = -tenperatura # 11
-
 kontua = -kontua # -200
-
 ```
 
-
-
-##  #Operadore laburtuak
+##  Eragile laburtuak
 
 Askotan, aldagai baten gainean jardun beharko duzu, eta emaitza aldagaian bertan gorde:
 
-
-
 ```python
-
 kontagailua = 0
-
 kontagailua = kontagailua + 2
-
 ```
 
-Horrelako egoeretan, operadore** laburtu* bat erabil dezakezu, eragiketa egin eta aldi berean esleitzen duena. Hori aurreko kodearen baliokidea izango litzateke:
-
-
+Horrelako egoeretan, eragile *laburtu* bat erabil dezakezu, eragiketa egin eta aldi berean esleitzen duena. Hori aurreko kodearen baliokidea izango litzateke:
 
 ```python
-
 kontagailua = 0
-
 kontagailua + = 2
-
 ```
 
 Gauza bera egin daiteke operadore guztiekin:
 
-
-
 | Eragiketa | Horixe bera | Laburtua |
-
 | -- | -- | -- |
-
 | a = a + 1 | | a + = 1 |
-
 | a = a - 1 | | a - = 1 |
-
 | a = a* 1 | | a* = 1 |
-
 | a = a/1 | | a/= 1 |
-
 | a = a % 1 | | a % = 1 |
-
 | a = a** 1 | | a** = 1 |
 
 
-
 0.6 ariketa
+
 Idatzi erabiltzaileari zenbaki bat eskatu eta handitu egingo duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza. Ondoren, balioa murriztu behar du eta emaitza kontsola bidez erakutsi. Operadore laburtuak erabili!
 
-
-
 ```python
-
 balioa = input ("Sartu zenbaki bat:")
-
 balioa + = 1
-
-
 
 print ("Gehikuntza da", balioa)
 
-
-
 balioa - = 1
 
-
-
 print ("Beherakada da", balioa)
-
 ```
-
-
 
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: 6
-
 Gehikuntza 7 da
-
 Beherakada 6 da
-
 ```
 
+## Konparazio eragileak
 
-
-## Konparazio-operadoreak
-
-Balio bat bestearekin alderatzeko aukera ematen diguten operadoreak dira. Normalean zenbakiekin erabiltzen da, eta eragiketa horien emaitza `True`edo `False«da.
-
-
+Balio bat bestearekin alderatzeko aukera ematen diguten eragileak dira. Normalean zenbakiekin erabiltzen da, eta eragiketa horien emaitza `True`edo `False«da.
 
 Adibidez, balio bat beste baten berdina den egiaztatzeko, operadorea erabiliko dugu.
 
-
-
 ```python
-
 balioa = 5
-
 emaitza = balioa = = 5
-
 ```
 
-
-
 Emaitza hauxe izango litzateke: `Trueu.
-
-
 
 Hona hemen konparazio-operadoreak:
 
-
-
 - Berdin:
-
 - Desberdina:
-
 - Baino handiagoa:
-
 - Honako hauek baino txikiagoa:
-
 - Handiagoa edo berdina: `> =
-
 - Txikia edo berdina:
-
 
 Testudun operadore hau ere erabil daiteke berdintasuna egiaztatzeko:
 
-
-
 ```python
-
 izena = "Ada"
-
 Emaitza = izena = = "Bug"
-
 ```
 
-Emaitza hau izango litzateke: `False«.
-
+Emaitza hau izango litzateke: `False`.
 Era berean, testu bat ordena alfabetikoan handiagoa edo txikiagoa den alderatzeko aukera ematen digu:
 
-
-
 ```python
-
 izena = "Ada"
-
 emaitza = "Ada" < "Bug"
-
 ```
 
-
-
 Emaitza hauxe izango litzateke: `Trueu.
-
-
 
 0.7 ariketa
 
 Idatzi erabiltzaileari bi zenbaki eskatzen dizkion programa bat. Gero, bere desberdintasuna alderatu behar du eta emaitza kontsolaren bidez erakutsi behar du.
 
-
-
 ```python
-
 valor1 = input ("Sartu zenbaki bat:")
-
 valor2 = input ("Sartu beste zenbaki bat:")
-
-
 
 emaitza = 1 balorazioa! = 2
 
-
-
 print ("Desberdinak dira?", emaitza)
-
 ```
 
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: 42
-
 Sartu beste zenbaki bat: 42
-
 Desberdinak dira? Falsea
-
 ```
 
+## Eragile boolearrak
 
-
-## Operadore boolearrak
-
-Operadore boolearrek aukera ematen digute eragiketak egiteko balio boolearrekin `True`edo `Falseere.
-
-
+Eragile boolearrek aukera ematen digute eragiketak egiteko balio boolearrekin `True`edo `Falseere.
 
 ##  #and
-
 Operadore horrek `Trueu 'itzuliko du, baldin eta bi operadoreak ere `Trueu:
 
-
-
 ```python
-
 balioa = 5
 emaitza = (balioa = = 5) and True;
-
 ```
-
-
 
 Emaitza hauxe izango litzateke: `Trueu.
-
 Aukera guztiak laburbiltzeko, horri esaten zaio operadorearen egiaren taula.
 
-
-
 | a | | b | emaitza |
-
 | -- | -- | -- | -- | |
-
 | `Helburua | `Argazkia | `Faialdea |
-
 | `Helburua | `Arduria | `Txurruna | `Falseere |
-
 | `Leharetxea | `Danera | `Faialdea | `Falseere |
-
 | `Erresuma | `Txurruna | `Trueu | `Trueu |
 
-
-
 0.8 ariketa
-
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, lehenengoa 0 baino handiagoa den eta, gainera, bikoitia den alderatu behar duzu.
 
-
-
 ```python
-
 balioa = input ("Sartu zenbaki bat:")
-
 balioa = int (balioa)
-
 emaitza = (balioa > = 0) and (balioa % 2 = = 0)
 
-
-
 print ("Parea eta positiboa al da?", emaitza)
-
 ```
-
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: 14
-
 Parea eta positiboa da? True
-
 ```
-
-
 
 ##  #or
-
 Operadore horrek honako hauek ere itzultzen ditu: `Trueu, baldin eta** edozein**, eta hauek ere bai:
 
-
-
 ```python
-
 balioa = 5
-
 emaitza = (balioa = = 5) or True;
-
 ```
-
-
 
 Emaitza hauxe izango litzateke: `Trueu.
 Aukera guztiak laburbiltzeko, hauxe izango litzateke operadorearen egiaren taula.
 
-
-
 | a | | b | emaitza |
-
 | -- | -- | -- | -- | |
-
 | `Helburua | `Ordua | `Ordua |
-
 | `Orduera | `Ordua | `Txurruna | `Trueu |
-
 | `Errueu | `Orduera | `Faialdea | `Trueu |
-
 | `Erresuma | `Ordua | `Txurruna | `Trueu |
 
-
-
 0.9 ariketa
-
 Idatzi programa bat erabiltzaileari bi zenbaki eskatzeko eta bietako bat positiboa den egiaztatzeko. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
-
-
 ```python
-
 valor1 = input ("Sartu zenbaki bat:")
-
 valor2 = input ("Sartu beste zenbaki bat:")
-
-
 
 emaitza = (int (valor1) > = 0) or (int (valor2) > = 0)
 
-
-
 print ("Bietako bat positiboa al da?", emaitza)
-
 ```
-
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: -4
-
 Sartu beste zenbaki bat: 6
-
 Bietako bat positiboa da? True
-
 ```
-
-
 
 ##  #not
-
 Operadore horrek kontrako balioa itzultzen du eragiketan. Aplikatzen bazaio, itzuli `Frueere 'ri, eta aplikatzen bazaio, itzuli `Falseere' ri:
 
-
-
 ```python
-
 balioa = True
-
 emaitza = not balioa;
-
 ```
-
-
 
 Emaitza hau izango litzateke: `False«.
 Aukera guztiak laburbiltzeko, hauxe izango litzateke operadorearen egiaren taula.
 
-
-
 | | a | emaitza |
-
 | -- | -- | -- |
-
 | `albistea | `Helburua | `False«|
-
 | `oharra | `Turruna | `Helburua |
 
-
-
 0.10 ariketa
-
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat, eta egiaztatu ez dela ez positiboa ez bikoitia.
 
-
-
 ```python
-
 balioa = input ("Sartu zenbaki bat:")
-
 balioa = int (balioa)
 
-
-
 positiboaYPar = (balioa > = 0) and (balioa % 2 = = 0)
-
 emaitza = not positiboaYPar
-
 print ("Ez al da parea eta positiboa?", emaitza)
-
 ```
-
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: -4
-
 Ez al da bikoitia eta positiboa? True
-
 ```
-
-
 
 ##  #Operadoreak konbinatzen
-
 Operadoreak behar adina konbina ditzakegu:
 
-
-
 ```python
-
 erretiratua = 65
-
 if adina > 17 and adina < (erretiratua + 1):
-
 print ("Lan egin dezakezu")
-
 ```
-
-
 
 Oro har, baldintzapeko eragileak baldintzapeko blokeen, begizten eta abarren baldintzen barruan erabiltzen dira.
 
-
-
 ## Proposatutako ariketak
-
-
 
 0.0 ariketa
 Idatzi erabiltzaileari zenbaki bat eskatu eta 7 biderkatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
-
-
 ```python
-
 balioa = input ("Sartu zenbaki bat:")
-
 emaitza = int (balioa)* 7
 
-
-
 print ("Biderketa da:", emaitza)
-
 ```
-
-
 
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: 3
-
 Biderketa hau da: 21
-
 ```
-
-
 
 0.1 ariketa
-
 Idatzi erabiltzaileari zenbaki bat eskatu eta bitan banatuko duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
-
-
 ```python
-
 balioa = input ("Sartu zenbaki bat:")
-
 emaitza = int (balioa)/2
 
-
-
 print ("Zatiketa da:", emaitza)
-
 ```
-
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: 60
-
 Banaketa hau da: 30
-
 ```
-
-
 
 0.2 ariketa
-
 Idatzi erabiltzaileari zenbaki bat eskatu eta 3. modulua egiten duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
-
-
 ```python
-
 balioa = input ("Sartu zenbaki bat:")
-
 emaitza = int (balioa) % 3
 
-
-
 print ("Modulua da:", emaitza)
-
 ```
-
-
 
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: 7
-
 Modulua hau da: 1
-
 ```
-
-
 0.3 ariketa
-
 Idatzi erabiltzaileari zenbaki bat eskatu eta 2ko esponentziala aplikatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
-
-
 ```python
-
 balioa = input ("Sartu zenbaki bat:")
-
 emaitza = int (balioa)** 2
-
-
 
 print ("Esponentziala da:", emaitza)
 
-
-
 ```
-
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: 4
-
 Esponentziala hau da: 16
-
 ```
-
-
 
 0.4 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta 5 kentzen dion programa bat. Jarraian, zeinua aldatu behar diozu eta emaitza kontsolarekin erakutsi.
 
-
-
 ```python
-
 balioa = input ("Sartu zenbaki bat:")
-
 resta = int (balioa) - 5
-
 emaitza = -resta
 
-
-
 print ("Azken kenketa da:", emaitza)
-
 ```
 
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: 4
-
 Hau da azken kenketa: 1
-
 ```
-
-
 
 0.5 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, % 2 eragiketa 0ren berdina den egiaztatu behar duzu, eta emaitza erakutsi. Zenbaki bat 2rekin zatitzen bada eta kenketa 0 bada, zenbaki hori bikoitia dela esan nahi du.
 
-
-
 ```python
 balioa = input ("Sartu zenbaki bat:")
-
 modulua = int (balioa) % 2
-
-
 
 emaitza = modulua = = 0
 
-
-
 print ("Balioa parea da?", emaitza)
-
 ```
 
 Emaitza
 
-
-
 ```console
-
 Sartu zenbaki bat: 8
-
 Kemena bikoitia da? True
-
 ```
 
-
-
 0.6 ariketa
-
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, zenbaki hori 0 edo handiagoa den egiaztatu behar duzu, hau da, positiboa den.
 
-
-
 ```python
-
 balioa = input ("Sartu zenbaki bat:")
-
-
 
 emaitza = int (balioa) > = 0
 
-
-
 print ("Positiboa al da?", emaitza)
-
 ```
-
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: 6
-
 Positiboa da? True
-
 ```
-
-
 
 0.7 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, lehenengoa 0 baino txikiagoa den alderatu behar duzu, eta emaitza kontsolaren bidez erakutsi. Zenbakia negatiboa den antzematen ariko ginateke.
 
-
-
 ```python
-
 balioa = input ("Sartu zenbaki bat:")
-
-
 
 emaitza = int (balioa) < 0
 
-
-
 print ("Negatiboa al da?", emaitza)
-
 ```
 
 Emaitza:
 
-
-
 ```console
-
 Sartu zenbaki bat: -3
-
 Negatiboa da? True
-
 ```
